Mostrar guiones de acuerdo a cada letra de una palabra y de forma centrada

--- a/juego.html
+++ b/juego.html
@@ -12,10 +12,5 @@
     <body>
         <canvas id="tablero" width="800" height="500"></canvas>
     </body>
-    <script>
-        var board = document.querySelector("#tablero");
-        var brush = board.getContext("2d");
-        brush.fillStyle = "gray";
-        brush.fillRect(0, 0, 1200, 800);
-    </script>
+    <script src="js/main.js"></script>
 </html>
