Desarrollo de las funciones que verifican las teclas presionadas por el usuario

--- a/juego.html
+++ b/juego.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
-    <body>
+    <body id="body-juego">
         <canvas id="tablero" width="800" height="500"></canvas>
     </body>
-    <script src="js/main.js"></script>
+    <script src="js/inicio-juego.js"></script>
 </html>
