Desarrollo de la lógica base del juego

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Home Page :D</h1>
         <br><br><br>
         <div class="opciones">
-            <a href="juego.html"><button id="iniciar-juego">Iniciar Juego</button></a>
+            <a href="templates/juego.html"><button id="iniciar-juego">Iniciar Juego</button></a>
             <br><br>
             <button id="agregar-palabra">Agregar nueva palabra</button>
         </div>
