Estilo inicial del juego

--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
-    <body>
-        <h1>Home Page :D</h1>
-        <br><br><br>
+    <body class="body-pagina">
+        <img src="images/Logo.png" class="imagen-superior" alt="logo">
         <div class="opciones">
-            <a href="templates/juego.html"><button id="iniciar-juego">Iniciar Juego</button></a>
-            <br><br>
-            <button id="agregar-palabra">Agregar nueva palabra</button>
+            <a href="templates/juego.html"><button id="iniciar-juego" class="estilo-boton1">Iniciar Juego</button></a>
         </div>
     </body>
 
-    <!--<script src="js/main.js"></script>-->
 </html>
